--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "autoprefixer": "^10.4.16",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
@@ -87,11 +88,11 @@
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.31",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.5.0",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^3.3.0",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
